--- a/js-storefront/mystore/src/index.html
+++ b/js-storefront/mystore/src/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Mystore</title>
+  <title>Spartacusstore</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <meta name="occ-backend-base-url" content="https://localhost:9002" />
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
+  <meta name="occ-backend-base-url" content="OCC_BACKEND_BASE_URL_VALUE" />
 </head>
 <body>
   <app-root></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
