--- a/js-storefront/spartacusstore/src/index.html
+++ b/js-storefront/spartacusstore/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Mystore</title>
-  <base href="/">
+  <base href="/shop/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="occ-backend-base-url" content="https://localhost:9002" />
